47-Bug-quick-fix-system-dark-mode - removed css that was pushing dark mode.
closes #47

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,8 +6,8 @@ html,
 body {
     padding: 0;
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-        Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
+        Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -19,7 +19,7 @@ a {
     box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
     html {
         color-scheme: dark;
     }
@@ -27,4 +27,9 @@ a {
         color: white;
         background: black;
     }
-}
+} */
+
+/* @media  (prefers-color-scheme: dark){
+    body {
+        background: #fff !important;
+    }} */
